--- a/BulletinBoard/LineChart.xaml
+++ b/BulletinBoard/LineChart.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="BulletinBoard.HeatMap"
+﻿<UserControl x:Class="BulletinBoard.LineChart"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:BulletinBoard"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <StackPanel Orientation="Vertical">
         <Canvas x:Name="MainCanvas" Background="White">
 
@@ -13,8 +14,6 @@
         <StackPanel Orientation="Horizontal" Background="LightGray">
             <TextBlock>X:</TextBlock>
             <TextBlock x:Name="X" Margin="2,0"></TextBlock>
-            <TextBlock>Y:</TextBlock>
-            <TextBlock x:Name="Y" Margin="2,0"></TextBlock>
             <TextBlock Margin="2,0">Values:</TextBlock>
             <TextBlock x:Name="Values" Margin="2,0"></TextBlock>
         </StackPanel>
