--- a/BBControlLibrary/HeatMap.xaml
+++ b/BBControlLibrary/HeatMap.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="BulletinBoard.LineChart"
+﻿<UserControl x:Class="BBControlLibrary.HeatMap"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BulletinBoard"
+             xmlns:local="clr-namespace:BBControlLibrary"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
     <StackPanel Orientation="Vertical">
         <Canvas x:Name="MainCanvas" Background="White">
 
@@ -14,6 +13,8 @@
         <StackPanel Orientation="Horizontal" Background="LightGray">
             <TextBlock>X:</TextBlock>
             <TextBlock x:Name="X" Margin="2,0"></TextBlock>
+            <TextBlock>Y:</TextBlock>
+            <TextBlock x:Name="Y" Margin="2,0"></TextBlock>
             <TextBlock Margin="2,0">Values:</TextBlock>
             <TextBlock x:Name="Values" Margin="2,0"></TextBlock>
         </StackPanel>
